Created password update endpoint
